--- a/examples/template.html
+++ b/examples/template.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="../dist/css/ohana.css">
-  <title>Starter - Ohana.css</title>
-</head>
-<body>
-  
-  <h1>Hello, Welcome to Ohana.css World!</h1>
+  <head>
+    <title>My custom Ohana website</title>
+    <link rel="stylesheet" href="css/ohana.css">
+  </head>
+  <body>
+     <h1 class="title">
+        Ohana
+    </h1>
 
-</body>
+    <p class="subtitle">
+      Modern CSS framework with Love.</a>
+    </p>
+  </body>
 </html>
