--- a/examples/utilities/spacing.html
+++ b/examples/utilities/spacing.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
   <head>
-    <title>Colors - Utilities</title>
+    <title>Spacing - Utilities</title>
     <link rel="stylesheet" href="../../dist/css/ohana.css">
     <link rel="stylesheet" href="../examples.css">
   </head>
