--- a/examples/BreadCrumb.html
+++ b/examples/BreadCrumb.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./examples.css">
 </head>
 <body>
-    <nav class='breadcrumb' aria-label="breadcrumbs">
+    <nav class="breadcrumb is-right" aria-label="breadcrumbs">
         <ul>
             <li><a href="#">Bumla</a></li>
             <li><a href="#">Documentation</a></li>
